Fix - 2014 monster template background should cover the whole statblock when stretched.

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -8817,7 +8817,8 @@ button.journal-view-button.journal-button {
     -moz-box-shadow: 0 5px 8px 0 #aaa;
     box-shadow: 0 5px 8px 0 #aaa;
     background-position: top!important;
-    background-image: url(https://media-stg.dndbeyond.com/compendium-images/tcoe/0gqawlEa2tjXGxpc/mm_statbg_sm.jpg)!important
+    background-image: url(https://media-stg.dndbeyond.com/compendium-images/tcoe/0gqawlEa2tjXGxpc/mm_statbg_sm.jpg)!important;
+    background-size: cover;
 }
 
 .note-text .stat-block-background:after,
@@ -9320,7 +9321,8 @@ button.journal-view-button.journal-button {
     -moz-box-shadow: 0 5px 8px 0 #aaa;
     box-shadow: 0 5px 8px 0 #aaa;
     background-position: top!important;
-    background-image: url(https://media-stg.dndbeyond.com/compendium-images/tcoe/0gqawlEa2tjXGxpc/mm_statbg_sm.jpg)!important
+    background-image: url(https://media-stg.dndbeyond.com/compendium-images/tcoe/0gqawlEa2tjXGxpc/mm_statbg_sm.jpg)!important;
+    background-size: cover;
 }
 
 .custom-stat-block .stat-block-background:after,
